--- a/FrontEnd/app/templates/home.html
+++ b/FrontEnd/app/templates/home.html
@@ -46,6 +46,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="http://www.lijenniferx.com">About</a></li>
             <li><a href="https://github.com/lijenniferx/HomewardBound">Github</a></li>
+            <li><a href="http://www.slideshare.net/lijenniferx/insight-presentation-4">Presentation</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
