--- a/FrontEnd/app/templates/presentation.html
+++ b/FrontEnd/app/templates/presentation.html
@@ -28,13 +28,10 @@
 
     <!-- Navigation -->
 
-<style type="text/css">
-
-    </style>
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="brand" ><img STYLE="position:absolute; TOP:15px; LEFT:50px; WIDTH:220px; HEIGHT:35px" src="/static/PetPics/logo.jpg" ></a>
+          <a class="brand" href = "/home"><img STYLE="position:absolute; TOP:15px; LEFT:50px; WIDTH:220px; HEIGHT:35px" src="/static/PetPics/logo.jpg" ></a>
 
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -48,7 +45,6 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="http://www.lijenniferx.com">About</a></li>
             <li><a href="https://github.com/lijenniferx/HomewardBound">Github</a></li>
-            <li><a href="/presentation">Presentation</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
