some final changes

--- a/FrontEnd/app/templates/error.html
+++ b/FrontEnd/app/templates/error.html
@@ -57,11 +57,11 @@
 
       <div class="starter-template">
         <h1></h1>
-        <p class="lead">A web tool for predicting and promoting dog adoption.<br>.</p>
+        <p class="lead">A tool for predicting and promoting dog adoption.<br>.</p>
       </div>
 
     <div>
-      <a> Sorry, that is not a valid Animal ID.  Please try again! </a>
+      <center><b> Sorry, that is not a valid Animal ID.  Please try again! </b></center>
       <form class="navbar-form text-center" action="/result" method="GET">
         Enter the Animal ID:
         <input type="text" name="ID" placeholder="e.g. 47377">
