--- a/FrontEnd/app/templates/home.html
+++ b/FrontEnd/app/templates/home.html
@@ -57,7 +57,7 @@
 
       <div class="starter-template">
         <h1></h1>
-        <p class="lead">A web tool for predicting and promoting dog adoption.<br>.</p>
+        <p class="lead">A tool for predicting and promoting dog adoption.<br>.</p>
       </div>
 
     <div>
