--- a/FrontEnd/app/templates/result2.html
+++ b/FrontEnd/app/templates/result2.html
@@ -14,7 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="static/starter-template.css" rel="stylesheet">
-
+    <link rel="icon" type="image/png" href="static/PetPics/doggie.jpg">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
