--- a/FrontEnd/app/templates/seeall.html
+++ b/FrontEnd/app/templates/seeall.html
@@ -13,7 +13,7 @@
     <link href="static/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="static/starter-template.css" rel="stylesheet">
+    <link href="static/mycustom.css" type = "text/css" rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -57,9 +57,9 @@
     <br>
     <br>
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-xs-7">
                 
                     {% for i in information %}
                         {% set my_string = 'static/PetPics/' ~   i[0]%}
@@ -74,7 +74,7 @@
 
                         <h4 align = "right">Animal ID: {{i[0]}}</h4>
                         <div>
-                        <a href="{{my_link}}"><img class="thumbnail" src="{{my_string}}"  align="right" height = "200" width = "200"></a>
+                        <a href="{{my_link}}"><img class="thumbnail2" src="{{my_string}}"  align="right" height = "200" width = "200"></a>
                         </div>
                         <br>
                         <div style="display:block;text-align:center">
