--- a/FrontEnd/app/templates/error.html
+++ b/FrontEnd/app/templates/error.html
@@ -26,7 +26,7 @@
   <body>
     <style type="text/css">
       body { background-image: url(static/PetPics/background.jpg);
-        background-size: 1350px 820px;
+        background-size: 100% 820px;
       background-repeat:no-repeatdisplay:compact;}
     </style>
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
