--- a/FrontEnd/app/templates/presentation.html
+++ b/FrontEnd/app/templates/presentation.html
@@ -72,8 +72,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h4>By Jennifer Li</h4>
-                    <object height="50" width="100" data="static/PetPics/Traditional American Song - Oh Susanna.mp3"></object>
-
+<!--                     <object height="50" width="100" data="static/PetPics/Traditional American Song - Oh Susanna.mp3"></object>
+ -->
                 </div>
             </div>
         </footer>
