--- a/FrontEnd/app/templates/presentation.html
+++ b/FrontEnd/app/templates/presentation.html
@@ -54,7 +54,7 @@
     <div class="banner">
     <div class="jumbotron">
        
-        <iframe src="http://www.slideshare.net/slideshow/embed_code/38353509" width="500" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+        <iframe src="http://www.slideshare.net/slideshow/embed_code/38435270" width="500" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 
      </div>
    </div>
@@ -72,6 +72,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h4>By Jennifer Li</h4>
+                    <a href= "https://www.icloud.com/iw/#keynote/BAJOWH3_ZJZ1ERBm6QGBgCu-8Ho-EXegauSF/Insight_Presentation_5">iCloud</a>
 <!--                     <object height="50" width="100" data="static/PetPics/Traditional American Song - Oh Susanna.mp3"></object>
  -->
                 </div>
