--- a/FrontEnd/app/templates/home.html
+++ b/FrontEnd/app/templates/home.html
@@ -44,7 +44,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://www.lijenniferx.com">About</a></li>
+            <li><a href="http://lijenniferx.com/projects/pet-adoption-insight-data-science/">About</a></li>
             <li><a href="https://github.com/lijenniferx/HomewardBound">Github</a></li>
             <li><a href="/presentation">Presentation</a></li>
           </ul>
