--- a/FrontEnd/app/templates/seeall.html
+++ b/FrontEnd/app/templates/seeall.html
@@ -42,7 +42,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://www.lijenniferx.com">About</a></li>
+            <li><a href="http://lijenniferx.com/projects/pet-adoption-insight-data-science/">About</a></li>
             <li><a href="https://github.com/lijenniferx/HomewardBound">Github</a></li>
           </ul>
         </div><!--/.nav-collapse -->
