--- a/FrontEnd/app/templates/home.html
+++ b/FrontEnd/app/templates/home.html
@@ -26,7 +26,7 @@
   <body>
     <style type="text/css">
       body { background-image: url(static/PetPics/background.jpg);
-        background-size: 100% 840px;
+        background-size: 100% 860px;
       background-repeat:no-repeatdisplay:compact;}
     </style>
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -57,7 +57,7 @@
 
       <div class="starter-template">
         <h1></h1>
-        <p class="lead">A tool for predicting and promoting dog adoption.<br>.</p>
+        <p class="lead">A tool for predicting and promoting dog adoption<br></p>
       </div>
 
     <div>
